--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,8 @@
-torch==2.9.1
-torchvision==0.24.0
+torch==2.6.0
 transformers==4.46.3
 tokenizers==0.20.3
+bitsandbytes>=0.41.0
+accelerate>=0.26.0
 tqdm
 einops
 addict 
